# quadrotor-simulation-gazebo

./: .gitmodules  README.md  multi_decentralized_control.sh  multi_distributed_control.sh
src/multi_uav_control/: CMakeLists.txt  package.xml
src/multi_uav_control/launch/: 7_hummingbirds.launch  multi_firefly_velocity.launch  multiple_hummingbird.launch  vertical_hummingbird.launch
src/multi_uav_control/src/nodes/: decentralized_control_node_uav_0.cpp  decentralized_control_node_uav_1.cpp  decentralized_control_node_uav_2.cpp  decentralized_control_node_uav_3.cpp  distributed_control_node_uav_0.cpp  distributed_control_node_uav_1.cpp  distributed_control_node_uav_2.cpp  distributed_control_node_uav_3.cpp
